--- a/Site_institucional/public/css/pokemons.css
+++ b/Site_institucional/public/css/pokemons.css
@@ -151,16 +151,32 @@ transform: translateX(300px);
     flex-wrap: wrap;
  }
  
+ 
+ .banner2 {
+     margin-top: -600px;
+     position: relative;
+     margin: 0 auto;
+     border-radius: 24px;
+     height: 250vh;
+     width: 65%;
+     color: white;
+     border: 3.5px solid#32B9CD;
+     background-color: rgb(255, 255, 255);
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-wrap: wrap;
+  }
 
 
 
-.banner2 {
+.banner3 {
     margin-top: -600px;
     position: relative;
     margin: 0 auto;
     border-radius: 24px;
-    height: 290vh;
-    width: 70%;
+    height: 250vh;
+     width: 65%;
     color: white;
     border: 3.5px solid#32B9CD;
     background-color: rgb(255, 255, 255);
@@ -171,22 +187,42 @@ transform: translateX(300px);
  }
  
 
+.banner4 {
+    margin-top: -600px;
+    position: relative;
+    margin: 0 auto;
+    border-radius: 24px;
+    height: 350vh;
+     width: 65%;
+    color: white;
+    border: 3.5px solid#32B9CD;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+ }
+ 
+ 
+/* Primeira pagina ----------------------*/
  
  .primeiraPagina{
      margin-left: 5%;
     margin-right: 5%;
-    
     width: 100%;
     height: 100%;
+    background-color: rgba(214, 211, 238, 0.308);
+    border-radius: 35px;
     
     
 }
 
 .P_titulo{
+    /* background-color: tomato; */
     background-image: url(../assets/imgs/International_Pokémon_logo.svg.png);
     background-repeat: no-repeat;
     background-size: 70%;
-    height: 10%;
+    height: 180px;
     width: 50%;
     margin-left: 15%;
 
@@ -199,116 +235,164 @@ transform: translateX(300px);
        font-family: cursive;
 }
 .corpo_pg1{
-    margin-top: 3%;
-    
+    margin-top: 1%;
+    /* background-color: seagreen; */
     width: 100%;
-    height: 110vh;
+    height: 90%;
     display: flex;
     flex-wrap: wrap;
 
 }
-.img_pg1_01{
-    border-radius: 45px;
-    background-image: url(../assets/gif/squirtle-pikachu.gif);
-    background-size: 120%;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 50%;
-    width: 60%;
 
+/* Primeiro texto pagina 1 */
+
+.txt_pg1_01{
+    height: 25%;
+    width: 40%;
+    color: rgb(0, 0, 0);
+    /* background-color: rgb(216, 208, 207); */
+    /* margin-top: 25px; */
+}
+
+.txt_pg1_01 p{
+    font-size: large ;
+    font-family: cursive;
 }
 
 
- .txt_pg1_01{
-    height: 63%;
-    width: 40%;
-    /* background-color: rgb(216, 208, 207); */
- }
- 
- .txt_pg1_01 p{
-     color: rgb(0, 0, 0);
-     font-size: large ;
-     font-family: cursive;
- }
- 
- .txt_pg1_02{
-     height: 50%;
-     width: 100%;
-     /* background-color: rgb(216, 208, 207);    */
+/* Primeira imagem pagina 1 */
+.img_pg1_01{
+    background-color: turquoise;
+    border-radius: 55px;
+    background-image: url(../assets/gif/squirtle-pikachu.gif);
+    background-position: center;
+    background-size: 110%;
+    background-repeat: no-repeat;
+    height: 15%;
+    width: 60%;
+    margin-top: 105px;
+
+}
+
+/* Segundo texto pagina 1 */
+
+    .txt_pg1_02{
+        height: 30%;
+        width: 100%;
+        /* background-color: rgb(216, 208, 207);    */
+        
     }
+    
     .txt_pg1_02 p{
         color: rgb(0, 0, 0);
         font-size: large ;
-   font-family: cursive;
-}
-.txt_pg1_02 h2{
-    color: rgb(0, 0, 0);
-    font-weight: lighter;
-    font-size: 30px;
-    font-family: cursive;
+        font-family: cursive;
+    }
+    
+    .txt_pg1_02 h2{
+        color: rgb(0, 0, 0);
+        font-weight: lighter;
+        font-size: 30px;
+        font-family: cursive;
+    }
+    
+    
+    
+    /* Segunda imagem pagina 1 */
+
+    .img_pg1_02{
+        border-radius: 45px;
+    background-image: url(../assets/gif/histografia-pokemon-go.png);
+    background-size: 50%;
+    /* background-color: saddlebrown; */
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 400px;
+    width: 40%;
+    margin-top: 200px;
+
 }
 
+
+
+
+/* Pagina 2------------------------- */
 
 .segundaPagina{
-    margin-top: 25px;
+    /* background-color: tomato; */
+    /* margin-top: 10px; */
     margin-left: 5%;
    margin-right: 5%;
-   
+   background-color: rgba(214, 211, 238, 0.308);
+   border-radius: 35px;
    width: 100%;
    height: 100%;
-   
-   
-}
-.corpo_pg2{
-    margin-top: 3%;
-    
-    width: 100%;
-    height: 110vh;
-    display: flex;
-    flex-wrap: wrap;
+  
+
 
 }
+.corpo_pg2{
+    /* margin-top: 3%; */
+    /* background-color: rgb(45, 23, 214); */
+    border-radius: 35px;
+    width: 100%;
+    height: 98%;
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+/* Primeeira imagem  */
+
+.img_pg2_01{
+     /* background-color: rgb(77, 214, 23); */
+     border-radius: 45px;
+    background-image: url(../assets/imgs/Pokemon-Firered-Leafgreen-Art.jpg);
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 18%;
+    width: 60%;
+    margin-top: 150px;
+    
+}
+
+
+/* Primera caixa de txt Pagina 2 */
 
 .txt_pg2_01{
     /* background-color: rosybrown; */
-    height: 50%;
+    height: 25%;
     width: 40%;
-    /* background-color: rgb(216, 208, 207); */
     display: flex;
-}
- .txt_pg2_01 p{
-     color: rgb(0, 0, 0);
-     font-size: 22PX ;
-font-family: cursive;
-}
- .img_pg2_01{
-     border-radius: 45px;
-    background-image: url(../assets/imgs/Pokemon-Firered-Leafgreen-Art.jpg);
-    background-size: 120%;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 50%;
-    width: 60%;
-
+    
+    
 }
 
-.txt_pg1_02{
-    height: 50%;
+.txt_pg2_01 p{
+    /* background-color: royalblue; */
+    color: rgb(0, 0, 0);
+    font-size: 22PX ;
+    font-family: cursive;
+}
+
+
+/* Segunda caixa de txt Pagina 2 */
+
+
+.txt_pg2_02{
+    /* background-color: rosybrown; */
+    height: 75%;
     width: 100%;
-    /* background-color: rgb(216, 208, 207);    */
-}
-.txt_pg1_02 p{
-    color: rgb(0, 0, 0);
-    font-size: 22px ;
-    font-family: cursive;
-}
-.txt_pg1_02 h2{
-    color: rgb(0, 0, 0);
-    font-weight: lighter;
-    font-size: 30px;
-    font-family: cursive;
+    
 }
 
+.txt_pg2_02 p{
+    /* background-color: royalblue; */
+    color: rgb(0, 0, 0);
+    font-size: larger ;
+    font-family: cursive;
+}
 
 .força{
     background-image: url('../assets/imgs/yellowVersion.jpg');
@@ -317,6 +401,14 @@ font-family: cursive;
     height: 250px;
     width: 250px;
 }
+
+.txt_pg2_02 h2{
+    color: rgb(0, 0, 0);
+    font-weight: lighter;
+    font-size: 30px;
+    font-family: cursive;
+}
+
 .força2{
     background-image: url('../assets/gif/mapas.webp');
     background-repeat: no-repeat;
@@ -327,14 +419,122 @@ font-family: cursive;
 
 
 
-.terceiraPagina{
-    margin-top: 25px;
+
+/* Terceira pagina------------- */
+
+.TerceiraPagina{
+    /* background-color: tomato; */
     margin-left: 5%;
-   margin-right: 5%;
-   
-   width: 100%;
-   height: 100%;
+    margin-right: 5%;
+    background-color: rgba(214, 211, 238, 0.308);
+    border-radius: 35px;
+    width: 100%;
+    height: 100%;
 }
+
+.corpo_pg3{
+    margin-top: 3%;
+    
+    width: 100%;
+    height: 110vh;
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+#curioso{
+    font-size: xx-large;
+    font-family: cursive;
+    color: #000;
+}
+
+.txt_pg3_00{
+width: 40%;
+height: 50%;
+margin-top: 90px;
+}
+
+.txt_pg3_00 p{
+    color: rgb(0, 0, 0);
+    font-size: 22px ;
+    font-family: cursive;
+}
+.img_pg3_01{
+    /* background-color: rgb(77, 214, 23); */
+     border-radius: 75px;
+     background-image: url(../assets/gif/triste.gif);
+    background-size: 110%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 50%;
+    width: 60%;
+    margin-top: 50px;
+
+}
+
+.txt_pg3_01{
+    margin: auto;
+    height: 50%;
+    width: 100%;
+    /* background-color: rgb(216, 208, 207);    */
+}
+.txt_pg3_01 p{
+    color: rgb(0, 0, 0);
+    font-size: 22px ;
+    font-family: cursive;
+}
+.txt_pg3_02{
+    margin: auto;
+    height: 10%;
+    width: 100%;
+    /* background-color: rgb(216, 208, 207);    */
+}
+.txt_pg3_02 p{
+    color: rgb(0, 0, 0);
+    font-size: 22px ;
+    font-family: cursive;
+}
+.txt_pg3_03{
+    margin: auto;
+    height: 20%;
+    width: 100%;
+    /* background-color: rgb(216, 208, 207);    */
+}
+.txt_pg3_03 p{
+    color: rgb(0, 0, 0);
+    font-size: 22px ;
+    font-family: cursive;
+}
+
+
+.trailer{
+    justify-content: center;
+    align-items: center;
+    background-position: center;
+    margin-top: 500px;
+    width: 650px;
+    height: 400;
+    background-color: rgb(0, 0, 0);
+    border-radius: 50px;
+}
+.trailer2{
+    margin-top: 53px;
+    width: 600px;
+    height: 400;
+    background-color: rgb(0, 0, 0);
+    border-radius: 50px;
+}
+.trailer3 {
+    margin-top: 53px;
+    width: 600px;
+    height: 400;
+    background-color: rgb(0, 0, 0);
+    border-radius: 50px;
+}
+
+
+
+
 
 /* FOOTER */
 
