--- a/Site_institucional/public/css/pokemons.css
+++ b/Site_institucional/public/css/pokemons.css
@@ -192,7 +192,7 @@ transform: translateX(300px);
     position: relative;
     margin: 0 auto;
     border-radius: 24px;
-    height: 350vh;
+    height: 365vh;
      width: 65%;
     color: white;
     border: 3.5px solid#32B9CD;
@@ -501,6 +501,17 @@ margin-top: 90px;
     /* background-color: rgb(216, 208, 207);    */
 }
 .txt_pg3_03 p{
+    color: rgb(0, 0, 0);
+    font-size: 22px ;
+    font-family: cursive;
+}
+.txt_pg3_04{
+
+    height: 20%;
+    width: 100%;
+    /* background-color: rgb(216, 208, 207);    */
+}
+.txt_pg3_04 p{
     color: rgb(0, 0, 0);
     font-size: 22px ;
     font-family: cursive;
