--- a/Site_institucional/public/dashboard/dash.css
+++ b/Site_institucional/public/dashboard/dash.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     font-family: 'Exo 2';
     /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-    background-color: rgb(0, 0, 1);
+    /* background-color: rgb(0, 0, 1); */
    
    
 }
@@ -118,7 +118,7 @@ body {
 }
 
 .header-left {
-    background-color: #212124;
+    /* background-color: #212124; */
 
     position: fixed;
     top:0 ;
@@ -163,7 +163,7 @@ body {
 .btn-nav {
     width: 40%;
     color: white;
-    background-color: #E6005A;
+    background-color: #5800e6;
     border-radius: 5px;
     text-align: center;
     padding: 2% 5%;
@@ -172,14 +172,14 @@ body {
 .btn-nav-white {
     width: 40%;
     background-color: white;
-    border: 3px solid #E6005A;
+    border: 3px solid #3200e6;
     border-radius: 5px;
     text-align: center;
     padding: 2% 5%;
 }
 
 .btn-nav-white h3 {
-    color: #E6005A;
+    color: #2300e6;
     padding: 0;
     margin: 0;
 }
@@ -388,7 +388,7 @@ background-color: #2274c2;
 
 
 
-/* Tela do game */
+/* Telas do game */
 
 .centro{
 /* background-color: rgba(0, 95, 139, 0.295); */
@@ -398,6 +398,7 @@ background-color: #2274c2;
     justify-content: center;
 }
 
+/* Tela preta inicio */
 .divTela{
     margin-top: 17px;
     margin-left: 20px;
@@ -406,10 +407,77 @@ background-color: #2274c2;
     height: 330px;
     width: 470px;
     border-radius: 10px;
-
-
-
 }
+
+/* Tela de escolha do jogo */
+
+.divTela2{
+    margin-top: 17px;
+    margin-left: 20px;
+    margin-right: 25px;
+    background-color: rgb(36, 188, 226);
+    height: 330px;
+    width: 470px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
+}
+.divTela2_1{
+    padding-top: 20px;
+    margin-left: 10px;
+    margin-right: 20px;
+    background-color: rgba(30, 149, 143, 0);
+    height: 280px;
+    width: 450px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: rgb(0, 0, 0) solid 3px;
+    
+    
+}
+
+.minijoguinhos{
+    /* background-color: blue; */
+    height: 80%;
+    width: 90%;
+    margin: auto;
+    padding-top: 55px;
+    display: flex;
+    
+}
+
+.minijoguinho1{
+    background-image: url(../assets/imgs/FireRed_boxart.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    background-color: #E6005A;
+    height:65% ;
+    width: 50%;
+    
+    border-radius: 15px;
+}
+.minijoguinho2{
+    background-image: url(../assets/imgs/LeafGreen_boxart.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    background-color: #E6005A;
+    height:65% ;
+    width: 50%;
+    
+    margin-left: 15px;
+    border-radius: 15px;
+}
+
+
+
+
 
 .div_dir{
     
@@ -420,7 +488,7 @@ background-color: #2274c2;
 }
 
 .div_btd{
-    /* background-color: rgba(165, 42, 42, 0.253); */
+    /* background-color: rgba(165, 42, 42, 0.253);  */
     height: 50%;
     width: 100%;
     
@@ -488,4 +556,80 @@ background-color: #2274c2;
 
 .div_AeB  button:hover{
     background-color: rgba(251, 253, 255, 0.329);
+}
+
+
+
+
+/* Pagina dos treinadores */
+
+.div_corpo2{
+    background-color: darkgreen;
+    width: 80%;
+    height: 100%;
+    margin-left: auto;
+    /* display: flex; */
+    /* margin: auto; */
+}
+
+#todos{
+width: 100%;
+height: 90%;
+background-color: rgb(137, 43, 226);
+display: flex;
+}
+#todosTreinadores{
+width: 70%;
+height: 90%;
+background-color: rgb(137, 43, 226);
+}
+.inicialFav{
+width: 30%;
+height: 100%;
+background-color: rgba(226, 43, 180, 0.534);
+}
+
+
+
+/* pagina mural */
+
+
+
+
+.publicacao {
+    background-color: rgb(163, 60, 60);
+    display: flex;
+    flex-wrap: wrap;
+    align-content: stretch;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    border-bottom: 3px solid #0400e6;
+    padding: 20px;
+    width: 95%;
+}
+
+.publicacao>*:not(:last-child) {
+    padding: 0 0 10px 0;
+}
+
+
+.toper{
+    background-color: coral;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    background-image: url('../assets/imgs/pokemon-ruby-version-wallpaper-thumb.jpg');
+    background-size: 10%;
+    background-position: center;
+}
+.toperr{
+    margin: auto;
+    height: 45%;
+    width: 12%;
+    border-radius: 15px;
+
+}
+.toperr:hover{
+border: cyan solid 3px;
 }
