--- a/Site_institucional/public/css/pokemons.css
+++ b/Site_institucional/public/css/pokemons.css
@@ -157,7 +157,7 @@ transform: translateX(300px);
      position: relative;
      margin: 0 auto;
      border-radius: 24px;
-     height: 250vh;
+     height: 450vh;
      width: 65%;
      color: white;
      border: 3.5px solid#32B9CD;
@@ -192,7 +192,7 @@ transform: translateX(300px);
     position: relative;
     margin: 0 auto;
     border-radius: 24px;
-    height: 365vh;
+    height: 600vh;
      width: 65%;
     color: white;
     border: 3.5px solid#32B9CD;
@@ -262,8 +262,8 @@ transform: translateX(300px);
 
 /* Primeira imagem pagina 1 */
 .img_pg1_01{
-    background-color: turquoise;
-    border-radius: 55px;
+    /* background-color: turquoise; */
+    border-radius: 75px;
     background-image: url(../assets/gif/squirtle-pikachu.gif);
     background-position: center;
     background-size: 110%;
@@ -383,7 +383,7 @@ transform: translateX(300px);
 .txt_pg2_02{
     /* background-color: rosybrown; */
     height: 75%;
-    width: 100%;
+    width: 50%;
     
 }
 
@@ -522,7 +522,7 @@ margin-top: 90px;
     justify-content: center;
     align-items: center;
     background-position: center;
-    margin-top: 500px;
+    margin-top:900px;
     width: 650px;
     height: 400;
     background-color: rgb(0, 0, 0);
@@ -536,7 +536,7 @@ margin-top: 90px;
     border-radius: 50px;
 }
 .trailer3 {
-    margin-top: 53px;
+    margin-top: 353px;
     width: 600px;
     height: 400;
     background-color: rgb(0, 0, 0);
