--- a/Site_institucional/public/dashboard/dash.css
+++ b/Site_institucional/public/dashboard/dash.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     font-family: 'Exo 2';
     /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-    /* background-color: rgb(0, 0, 1); */
+    background-color: rgb(0, 0, 1);
    
    
 }
@@ -62,7 +62,10 @@ body {
 } */
 
 .avatar_index_foto{
-    background-color: darkgoldenrod;
+    background-image: url('./mew.gif');
+    background-position: center;
+    background-size: 100%;
+    /* background-color: darkgoldenrod; */
     height: 20vh;
     width: 50%;
     margin: auto ;
@@ -118,7 +121,7 @@ body {
 }
 
 .header-left {
-    /* background-color: #212124; */
+    background-color: #212124;
 
     position: fixed;
     top:0 ;
@@ -206,7 +209,7 @@ background-color: #2274c2;
 
 
 .div_corpo{
-    background-color: darkgreen;
+    /* background-color: darkgreen;  */
     width: 80%;
     height: 100%;
     margin-left: auto;
@@ -250,11 +253,11 @@ background-color: #2274c2;
     
     margin-top: 30px;
     margin-left: 25px;
-    margin-right: 25px;
+    margin-right: 15px;
 }
 .controle button{
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
 }
 
 
@@ -302,7 +305,7 @@ background-color: #2274c2;
     /* background-color: rgb(137, 43, 226); */
     height: 100%;
     width: 50%;
-    margin-left: 10px;
+    /* margin-left: 15px; */
     margin-bottom: 10px;
 }
 
@@ -347,8 +350,8 @@ background-color: #2274c2;
     /* background-color: rgba(255, 0, 0, 0.404); */
     height: 30%;
     width: 25%;
-    margin-top:45px;
-    margin-left: 65%;
+    margin-top:25px;
+    margin-left: 85%;
     margin-right: 15px;
 }
 
@@ -400,24 +403,24 @@ background-color: #2274c2;
 
 /* Tela preta inicio */
 .divTela{
-    margin-top: 17px;
-    margin-left: 20px;
-    margin-right: 25px;
+    margin-top: 10px;
+    margin-left:35px;
+    margin-right: 45px;
     background-color: rgb(0, 0, 0);
-    height: 330px;
-    width: 470px;
+    height: 230px;
+    width: 340px;
     border-radius: 10px;
 }
 
 /* Tela de escolha do jogo */
 
 .divTela2{
-    margin-top: 17px;
+    margin-top: 10px;
     margin-left: 20px;
-    margin-right: 25px;
+    margin-right: 20    px;
     background-color: rgb(36, 188, 226);
-    height: 330px;
-    width: 470px;
+    height: 230px;
+    width: 340px;
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -427,11 +430,11 @@ background-color: #2274c2;
 }
 .divTela2_1{
     padding-top: 20px;
-    margin-left: 10px;
-    margin-right: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
     background-color: rgba(30, 149, 143, 0);
-    height: 280px;
-    width: 450px;
+    height: 200px;
+    width: 320px;
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -483,8 +486,8 @@ background-color: #2274c2;
     
 /* background-color: rgba(14, 237, 241, 0.356); */
     height: 70%;
-    width: 30%;
-    margin-right: 10%;
+    width: 70%;
+    margin-right: 12%;
 }
 
 .div_btd{
@@ -505,46 +508,48 @@ background-color: #2274c2;
 }
 
 .led{
-    margin-right: 33%;
-    margin-top: 20px;
+    margin-right: 55%;
+    margin-top: 12px;
     background-color: rgba(97, 10, 6, 0.774);
-    border-radius: 15px;
-    height: 22px;
-    width: 22px;
+    border-radius: 25px;
+    height: 17px;
+    width: 17px;
     
 }
 .div_AeB{
     display: flex;
-    /* background-color: rgba(0, 139, 139, 0.452); */
-    margin-top:33% ;
-    height: 45%;
-    width: 95%;
+    /* background-color: rgb(238, 255, 0); */
+    margin-top:45% ;
+    height: 50%;
+    width: 100%;
 }
 
 .div_A{
-    /* background-color: rgba(189, 183, 107, 0.294); */
-    height: 100%;
+    /* background-color: rgb(52, 50, 163); */
+    height: 90%;
     width: 50%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: center; 
+     justify-content: center;
     padding-top: 20px;
-    padding-left: 30px;
+    /* margin-left: 20px; */
 }
 .div_B{
     /* background-color:rgba(85, 107, 47, 0.329) ; */
     height: 80%;
-    width: 50%;
+    width: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding-bottom: 90px;
 
+
 }
 
 .div_AeB button{
-    height: 65px;
-    width: 65px;
+    background-color: #ffffff;
+    height: 50px;
+    width: 50px;
     margin-bottom: 10px;
     /* margin-top: 15%; */
     background-color: #2275c200;
@@ -564,7 +569,7 @@ background-color: #2274c2;
 /* Pagina dos treinadores */
 
 .div_corpo2{
-    background-color: darkgreen;
+    /* background-color: darkgreen; */
     width: 80%;
     height: 100%;
     margin-left: auto;
@@ -575,13 +580,14 @@ background-color: #2274c2;
 #todos{
 width: 100%;
 height: 90%;
-background-color: rgb(137, 43, 226);
+/* background-color: rgb(137, 43, 226); */
 display: flex;
 }
 #todosTreinadores{
 width: 70%;
 height: 90%;
-background-color: rgb(137, 43, 226);
+color: white;
+/* background-color: rgb(137, 43, 226); */
 }
 .inicialFav{
 width: 30%;
@@ -597,7 +603,7 @@ background-color: rgba(226, 43, 180, 0.534);
 
 
 .publicacao {
-    background-color: rgb(163, 60, 60);
+    /* background-color: rgb(163, 60, 60); */
     display: flex;
     flex-wrap: wrap;
     align-content: stretch;
@@ -615,7 +621,7 @@ background-color: rgba(226, 43, 180, 0.534);
 
 
 .toper{
-    background-color: coral;
+    /* background-color: coral; */
     width: 100%;
     height: 10%;
     display: flex;
